testsuite/tests/morphisms/should_fail/all.T
test('NoSuper', normal, compile_fail, [''])
test('T', normal, compile_fail, [''])
test('BadMethod', normal, compile_fail, [''])
